adding unit tests, fix maparea string parsing